s/xmms\.se/xmms2.org/
Levitation import of page 2384 rev 11268.

--- a/0-/GSoC:2007/Generated IPC/Server.mediawiki
+++ b/0-/GSoC:2007/Generated IPC/Server.mediawiki
@@ -12,6 +12,6 @@ Object initialization methods will call xmms_ipc_object_register(TYPE,OBJ) on th
  } xmms_playlist_t;
 
 
-Then, xmms_ipc_object_register(XMMS_IPC_OBJECT_PLAYLIST,playlist) is called after the playlist_init function fills in the function pointers. xmms_ipc_object_register then knows what functions are used for different IPC signals like XMMS_IPC_CMD_CLEAR and XMMS_IPC_SIGNAL_PLAYLIST_CHANGED. Instead of the playlist init code having to manually register the functions individually, it becomes one call to xmms_ipc_object_register() See [http://exodus.xmms.se/~andersg/genipc/generated.c.txt] for a more complete struct example.
+Then, xmms_ipc_object_register(XMMS_IPC_OBJECT_PLAYLIST,playlist) is called after the playlist_init function fills in the function pointers. xmms_ipc_object_register then knows what functions are used for different IPC signals like XMMS_IPC_CMD_CLEAR and XMMS_IPC_SIGNAL_PLAYLIST_CHANGED. Instead of the playlist init code having to manually register the functions individually, it becomes one call to xmms_ipc_object_register() See [http://people.xmms2.org/~andersg/genipc/generated.c.txt] for a more complete struct example.
 
 == Examples ==
