--- a/0-/GSoC:2007/Service Clients/scm.mediawiki
+++ b/0-/GSoC:2007/Service Clients/scm.mediawiki
@@ -10,7 +10,7 @@ Service client should place a config file with the filename the same as the its 
 
 = Configuration =
 
-scm is configurable by setting three configvals in the server's config file manually or using [http://doxygen.xmms2.xmms.se/clientlib/stable/xmmsclient/group__ConfigControl.html configval API].  All of the configvals are located in "clients" section and under "scm" client name.
+scm is configurable by setting three configvals in the server's config file manually or using [http://doxygen.xmms2.org/clientlib/stable/xmmsclient/group__ConfigControl.html configval API].  All of the configvals are located in "clients" section and under "scm" client name.
 
 One of them, '''"monitor"''', controls whether or not scm should monitor service client config dir using libinotify (if using kernel later than 2.6.13) or by periodic polling (the period is set to 10 seconds by default).  The value for this configval can either be "yes" or "no".  It is set to "no" by default.
 
