s/xmms\.se/xmms2.org/
Levitation import of page 2470 rev 11275.

--- a/0-/GSoC:2008/Service Clients and Language Bindings/Details.mediawiki
+++ b/0-/GSoC:2008/Service Clients and Language Bindings/Details.mediawiki
@@ -1,4 +1,4 @@
-This is a slightly abridged overview and abstract from my original proposal [http://numbers.xmms.se/~puzzles/sc/SoC XMMS2 Service Clients Proposal.pdf]:
+This is a slightly abridged overview and abstract from my original proposal [http://people.xmms2.org/~puzzles/sc/SoC XMMS2 Service Clients Proposal.pdf]:
 
 == Overview ==
 Service clients are very simple, but very powerful clients which provide
