--- a/0-/README.mediawiki
+++ b/0-/README.mediawiki
@@ -1,7 +1,7 @@
 __NOTOC__
 
 ;Note:
-''This page is kept in sync with the [http://git.xmms.se/xmms2/xmms2-stable/tree/README README] file distributed with the XMMS2 source code (as per [[Release Checklist]]).''
+''This page is kept in sync with the [http://git.xmms2.org/xmms2/xmms2-stable/tree/README README] file distributed with the XMMS2 source code (as per [[Release Checklist]]).''
 
 ==XMMS2==
 
@@ -47,8 +47,8 @@ for further info might be: http://xmms2.org/wiki/Developer_Corner
 ==CONTACT==
 
 Feel free to post any questions/patches/whatever to the mailing list:
-xmms2-devel@lists.xmms.se
-(http://lists.xmms.se/cgi-bin/mailman/listinfo/xmms2-devel for subscription)
+xmms2-devel@lists.xmms2.org
+(http://lists.xmms2.org/cgi-bin/mailman/listinfo/xmms2-devel for subscription)
 
 The IRC channel is usually fairly active as well, chat away at: #xmms2 on
 freenode (irc.freenode.net)
