s/xmms\.se/xmms2.org/
Levitation import of page 2061 rev 11297.

--- a/0-/Release:DrGonzo.mediawiki
+++ b/0-/Release:DrGonzo.mediawiki
@@ -3,7 +3,7 @@
 
 == Release Notes ==
 
-This is a live broadcast from the XMMS2 Team! We are releasing a new Developer Release to the wild. This one is dubbed DrGonzo and includes a heap of new exciting bugs (a.k.a. features). This is the first release of XMMS2 that contains code sponsored by Google Summer of Code. Download at the usual places over at [http://sourceforge.net/projects/xmms2 sourceforge] and read the full release notes [http://wiki.xmms2.xmms.se/index.php/Release:DrGonzo here].
+This is a live broadcast from the XMMS2 Team! We are releasing a new Developer Release to the wild. This one is dubbed DrGonzo and includes a heap of new exciting bugs (a.k.a. features). This is the first release of XMMS2 that contains code sponsored by Google Summer of Code. Download at the usual places over at [http://sourceforge.net/projects/xmms2 sourceforge] and read the full release notes [http://xmms2.org/wiki/Release:DrGonzo here].
 
 === Upgrading ===
 
